--- a/modules/teams/src/attachments/attachments.component.html
+++ b/modules/teams/src/attachments/attachments.component.html
@@ -12,7 +12,7 @@
     *ngIf="att.attachmentId && offline.isOnline()"
     (click)="openAttachment(att)"
   >
-    <ion-icon name="open-outline" slot="icon-only" size="small"></ion-icon>
+    <ion-icon name="open-outline" slot="icon-only" size="small" />
   </ion-button>
   <ion-icon
     slot="start"
@@ -20,26 +20,26 @@
     *ngIf="!editMode && att.attachmentId"
     [name]="getFormatIcon(att.format)"
     [title]="att.format"
-  ></ion-icon>
+  />
   <ion-input
     *ngIf="editMode && att.attachmentId"
     [(ngModel)]="att.name"
     (ionBlur)="$event.target.value = $event.target.value || t._('IDEA_TEAMS.ATTACHMENTS.NO_NAME')"
-  ></ion-input>
+  />
   <ion-label class="loadingWarning" *ngIf="editMode && !att.attachmentId">
     {{ 'IDEA_TEAMS.ATTACHMENTS.UPLOADING_ATTACHMENT_WARNING' | translate }}
   </ion-label>
   <ion-label *ngIf="!editMode">{{ att.name }}.{{ att.format }}</ion-label>
-  <ion-spinner slot="end" *ngIf="!att.attachmentId" [title]="t._('IDEA_TEAMS.ATTACHMENTS.UPLOADING')"></ion-spinner>
+  <ion-spinner slot="end" *ngIf="!att.attachmentId" [title]="'IDEA_TEAMS.ATTACHMENTS.UPLOADING' | translate" />
   <ion-button
     *ngIf="editMode"
     slot="end"
     color="danger"
     fill="clear"
-    [title]="t._('IDEA_TEAMS.ATTACHMENTS.REMOVE_ATTACHMENT')"
+    [title]="'IDEA_TEAMS.ATTACHMENTS.REMOVE_ATTACHMENT' | translate"
     (click)="removeAttachment(att)"
   >
-    <ion-icon name="remove" slot="icon-only"></ion-icon>
+    <ion-icon name="remove" slot="icon-only" />
   </ion-button>
 </ion-item>
 <!----->
@@ -51,7 +51,7 @@
 <!----->
 <div *ngIf="editMode">
   <ion-item class="attachments" [lines]="lines" *ngFor="let err of uploadErrors">
-    <ion-icon name="alert-circle" slot="start" color="danger"></ion-icon>
+    <ion-icon name="alert-circle" slot="start" color="danger" />
     <ion-label color="danger">
       {{ err }}
       <p>{{ 'IDEA_TEAMS.ATTACHMENTS.ERROR_UPLOADING_ATTACHMENT' | translate }}</p>
@@ -60,10 +60,10 @@
       slot="end"
       color="danger"
       fill="clear"
-      [title]="t._('IDEA_TEAMS.ATTACHMENTS.HIDE_ERROR')"
+      [title]="'IDEA_TEAMS.ATTACHMENTS.HIDE_ERROR' | translate"
       (click)="uploadErrors.splice(uploadErrors.indexOf(err), 1)"
     >
-      <ion-icon name="close" slot="icon-only"></ion-icon>
+      <ion-icon name="close" slot="icon-only" />
     </ion-button>
   </ion-item>
 </div>
@@ -71,14 +71,14 @@
 <ion-item lines="none" class="selectable" *ngIf="editMode" (click)="browseFiles()">
   <ion-label color="medium">{{ 'IDEA_TEAMS.ATTACHMENTS.TAP_TO_ADD_ATTACHMENT' | translate }}</ion-label>
   <input id="attachmentPicker" type="file" multiple style="display: none" (change)="addAttachmentFromFile($event)" />
-  <ion-icon slot="end" name="caret-down" class="selectIcon" *ngIf="editMode"></ion-icon>
+  <ion-icon slot="end" name="caret-down" class="selectIcon" *ngIf="editMode" />
   <ion-button
     slot="end"
     fill="clear"
     color="dark"
-    *ngIf="editMode && platform.is('capacitor')"
+    *ngIf="editMode && isCapacitor()"
     (click)="takePictureAndAttach($event)"
   >
-    <ion-icon slot="icon-only" name="camera"></ion-icon>
+    <ion-icon slot="icon-only" name="camera" />
   </ion-button>
 </ion-item>
