--- a/modules/common/src/checker/checks.component.html
+++ b/modules/common/src/checker/checks.component.html
@@ -1,18 +1,18 @@
 <ion-header>
   <ion-toolbar color="ideaToolbar">
     <ion-buttons slot="start">
-      <ion-button [title]="t._('IDEA_COMMON.CHECKER.CLOSE_WITHOUT_SELECTING')" (click)="cancel()">
+      <ion-button [title]="'IDEA_COMMON.CHECKER.CLOSE_WITHOUT_SELECTING' | translate" (click)="cancel()">
         <ion-icon slot="icon-only" name="chevron-down" />
       </ion-button>
     </ion-buttons>
     <ion-searchbar
       #searchbar
       [debounce]="100"
-      [placeholder]="searchPlaceholder ?? t._('IDEA_COMMON.CHECKER.SEARCH')"
+      [placeholder]="searchPlaceholder ?? ('IDEA_COMMON.CHECKER.SEARCH' | translate)"
       (ionInput)="search($event.target.value)"
     />
     <ion-buttons slot="end">
-      <ion-button [title]="t._('IDEA_COMMON.CHECKER.CONFIRM_SELECTION')" (click)="confirm()">
+      <ion-button [title]="'IDEA_COMMON.CHECKER.CONFIRM_SELECTION' | translate" (click)="confirm()">
         {{ 'IDEA_COMMON.CHECKER.DONE' | translate }}
       </ion-button>
     </ion-buttons>
@@ -25,10 +25,10 @@
       </span>
     </ion-title>
     <ion-buttons slot="end" *ngIf="!limitSelectionToNum && allowSelectDeselectAll">
-      <ion-button [title]="t._('IDEA_COMMON.CHECKER.DESELECT_ALL')" (click)="checkAll(false)">
+      <ion-button [title]="'IDEA_COMMON.CHECKER.DESELECT_ALL' | translate" (click)="checkAll(false)">
         <ion-icon slot="icon-only" name="square-outline" />
       </ion-button>
-      <ion-button [title]="t._('IDEA_COMMON.CHECKER.SELECT_ALL')" (click)="checkAll(true)">
+      <ion-button [title]="'IDEA_COMMON.CHECKER.SELECT_ALL' | translate" (click)="checkAll(true)">
         <ion-icon slot="icon-only" name="checkbox-outline" />
       </ion-button>
     </ion-buttons>
