--- a/modules/common/src/customFields/customFieldMeta.component.html
+++ b/modules/common/src/customFields/customFieldMeta.component.html
@@ -53,7 +53,7 @@
           fill="clear"
           class="marginTop"
           [title]="'COMMON.EDIT' | translate"
-          (click)="editLabel(t._('IDEA_COMMON.CUSTOM_FIELDS.NAME'), _field.name)"
+          (click)="editLabel(_translate._('IDEA_COMMON.CUSTOM_FIELDS.NAME'), _field.name)"
         >
           <ion-icon slot="icon-only" icon="pencil" />
         </ion-button>
@@ -72,7 +72,7 @@
           fill="clear"
           class="marginTop"
           [title]="'COMMON.EDIT' | translate"
-          (click)="editLabel(t._('IDEA_COMMON.CUSTOM_FIELDS.DESCRIPTION'), _field.description)"
+          (click)="editLabel(_translate._('IDEA_COMMON.CUSTOM_FIELDS.DESCRIPTION'), _field.description)"
         >
           <ion-icon slot="icon-only" icon="pencil" />
         </ion-button>
