--- a/modules/common/src/email/emailData.component.html
+++ b/modules/common/src/email/emailData.component.html
@@ -20,7 +20,7 @@
   <ion-label position="stacked" *ngIf="label">{{ label }}</ion-label>
   <div class="description">
     <div class="placeholder" *ngIf="!emailData.subject">{{ placeholder }}</div>
-    <div *ngIf="emailData.subject" [innerHTML]="emailData.subject | highlight : _variables"></div>
+    <div *ngIf="emailData.subject" [innerHTML]="emailData.subject | highlight : variablesPlain"></div>
     <p *ngIf="emailData.to.length">
       <ion-text>{{ 'IDEA_COMMON.EMAIL.TO' | translate }}:</ion-text> {{ emailData.to.join(', ') }}
     </p>
