--- a/modules/common/src/email/emailDataConfiguration.component.html
+++ b/modules/common/src/email/emailDataConfiguration.component.html
@@ -1,13 +1,13 @@
 <ion-header>
   <ion-toolbar color="ideaToolbar">
     <ion-buttons slot="start">
-      <ion-button [title]="t._('COMMON.CLOSE')" (click)="close()">
+      <ion-button [title]="'COMMON.CLOSE' | translate" (click)="close()">
         <ion-icon slot="icon-only" name="close" />
       </ion-button>
     </ion-buttons>
     <ion-title>{{ title || 'IDEA_COMMON.EMAIL.EMAIL_DATA' | translate }}</ion-title>
     <ion-buttons slot="end" *ngIf="!disabled">
-      <ion-button [title]="t._('COMMON.SAVE')" (click)="save()">
+      <ion-button [title]="'COMMON.SAVE' | translate" (click)="save()">
         <ion-icon name="checkmark-circle" slot="icon-only" />
       </ion-button>
     </ion-buttons>
@@ -15,22 +15,37 @@
 </ion-header>
 <ion-content>
   <ion-list class="aList ion-padding" [class.viewMode]="disabled" [class.editMode]="!disabled">
-    <idea-list [data]="_emailData.to" [label]="t._('IDEA_COMMON.EMAIL.TO')" [lines]="lines" [disabled]="disabled" />
-    <idea-list [data]="_emailData.cc" [label]="t._('IDEA_COMMON.EMAIL.CC')" [lines]="lines" [disabled]="disabled" />
-    <idea-list [data]="_emailData.bcc" [label]="t._('IDEA_COMMON.EMAIL.BCC')" [lines]="lines" [disabled]="disabled" />
+    <idea-list
+      [data]="emailDataWC.to"
+      [label]="'IDEA_COMMON.EMAIL.TO' | translate"
+      [lines]="lines"
+      [disabled]="disabled"
+    />
+    <idea-list
+      [data]="emailDataWC.cc"
+      [label]="'IDEA_COMMON.EMAIL.CC' | translate"
+      [lines]="lines"
+      [disabled]="disabled"
+    />
+    <idea-list
+      [data]="emailDataWC.bcc"
+      [label]="'IDEA_COMMON.EMAIL.BCC' | translate"
+      [lines]="lines"
+      [disabled]="disabled"
+    />
     <ion-item [lines]="lines">
       <ion-label position="stacked">{{ 'IDEA_COMMON.EMAIL.SUBJECT' | translate }}</ion-label>
-      <div class="innerContent" *ngIf="disabled" [innerHTML]="_emailData.subject | highlight : _variables"></div>
-      <ion-input type="text" *ngIf="!disabled" [(ngModel)]="_emailData.subject" />
+      <div class="innerContent" *ngIf="disabled" [innerHTML]="emailDataWC.subject | highlight : variablesPlain"></div>
+      <ion-input type="text" *ngIf="!disabled" [(ngModel)]="emailDataWC.subject" />
     </ion-item>
     <ion-item [lines]="lines">
       <ion-label position="stacked">{{ 'IDEA_COMMON.EMAIL.CONTENT' | translate }}</ion-label>
       <div
         class="innerContent md"
         *ngIf="disabled"
-        [innerHTML]="mdToHtml(_emailData.content) | highlight : _variables"
+        [innerHTML]="mdToHtml(emailDataWC.content) | highlight : variablesPlain"
       ></div>
-      <ion-textarea maxlength="1000" *ngIf="!disabled" [rows]="8" [(ngModel)]="_emailData.content" />
+      <ion-textarea maxlength="1000" *ngIf="!disabled" [rows]="8" [(ngModel)]="emailDataWC.content" />
     </ion-item>
     <idea-mde-toolbar *ngIf="!disabled" />
   </ion-list>
