--- a/modules/common/src/list/listElements.component.html
+++ b/modules/common/src/list/listElements.component.html
@@ -1,20 +1,20 @@
 <ion-header>
   <ion-toolbar color="ideaToolbar">
     <ion-buttons slot="start">
-      <ion-button [title]="t._('IDEA_COMMON.LIST.CANCEL_AND_CLOSE')" (click)="close()">
+      <ion-button [title]="'IDEA_COMMON.LIST.CANCEL_AND_CLOSE' | translate" (click)="close()">
         <ion-icon slot="icon-only" icon="chevron-down" />
       </ion-button>
     </ion-buttons>
     <ion-searchbar
       #searchbar
-      [placeholder]="searchPlaceholder ?? t._('COMMON.SEARCH')"
+      [placeholder]="searchPlaceholder ?? ('COMMON.SEARCH' | translate)"
       (ionInput)="search($event.target.value)"
     />
     <ion-buttons slot="end">
-      <ion-button [title]="t._('IDEA_COMMON.LIST.NEW_ELEMENT')" (click)="addElement()">
+      <ion-button [title]="'IDEA_COMMON.LIST.NEW_ELEMENT' | translate" (click)="addElement()">
         <ion-icon icon="add" slot="icon-only" />
       </ion-button>
-      <ion-button [title]="t._('IDEA_COMMON.LIST.SAVE_AND_CLOSE')" (click)="close(true)">
+      <ion-button [title]="'IDEA_COMMON.LIST.SAVE_AND_CLOSE' | translate" (click)="close(true)">
         <ion-icon icon="checkmark-circle" slot="icon-only" />
       </ion-button>
     </ion-buttons>
