--- a/modules/common/src/offline/offlineManager.component.html
+++ b/modules/common/src/offline/offlineManager.component.html
@@ -9,7 +9,7 @@
       {{ 'IDEA_COMMON.OFFLINE.OFFLINE_MANAGER' | translate }}
     </ion-title>
     <ion-buttons slot="end">
-      <ion-button [title]="t._('IDEA_COMMON.OFFLINE.ADVANCED_ACTIONS')" (click)="actions()">
+      <ion-button [title]="'IDEA_COMMON.OFFLINE.ADVANCED_ACTIONS' | translate" (click)="actions()">
         <ion-icon slot="icon-only" name="ellipsis-vertical" />
       </ion-button>
     </ion-buttons>
@@ -17,24 +17,24 @@
 </ion-header>
 <ion-content>
   <ion-list class="aList">
-    <ion-list-header *ngIf="!offline.synchronizing && offline.requiresManualConfirmation">
+    <ion-list-header *ngIf="!_offline.synchronizing && _offline.requiresManualConfirmation">
       <ion-label>
         <h2>{{ 'IDEA_COMMON.OFFLINE.HUGE_SYNC_NEED_MANUAL_CONFIRMATION' | translate }}</h2>
       </ion-label>
     </ion-list-header>
-    <ion-list-header *ngIf="!offline.synchronizing">
+    <ion-list-header *ngIf="!_offline.synchronizing">
       <ion-label class="ion-text-wrap">
         <h3 class="lastSyncAt">
           {{ 'IDEA_COMMON.OFFLINE.LAST_SYNC' | translate }}:
           <ion-text>
             {{
-              offline.lastSyncAt
-                ? (offline.lastSyncAt | dateLocale : 'medium')
+              _offline.lastSyncAt
+                ? (_offline.lastSyncAt | dateLocale : 'medium')
                 : ('IDEA_COMMON.OFFLINE.NEVER' | translate)
             }}
           </ion-text>
         </h3>
-        <p *ngIf="offline.errorInLastSync">
+        <p *ngIf="_offline.errorInLastSync">
           <ion-text color="danger">
             <b>{{ 'IDEA_COMMON.OFFLINE.ERROR_DURING_LAST_SYNC' | translate }}</b>
           </ion-text>
@@ -43,33 +43,33 @@
       <ion-button
         size="small"
         fill="solid"
-        [color]="offline.errorInLastSync ? 'danger' : 'dark'"
-        [disabled]="offline.isOffline()"
+        [color]="_offline.errorInLastSync ? 'danger' : 'dark'"
+        [disabled]="_offline.isOffline()"
         (click)="sync()"
       >
         <ion-icon slot="start" name="sync" /> {{ 'IDEA_COMMON.OFFLINE.SYNC_NOW' | translate }}
       </ion-button>
     </ion-list-header>
   </ion-list>
-  <ion-list class="aList" *ngIf="offline.synchronizing">
+  <ion-list class="aList" *ngIf="_offline.synchronizing">
     <ion-item>
       <ion-label class="ion-text-center">
         <ion-spinner name="crescent" color="primary" />
       </ion-label>
     </ion-item>
   </ion-list>
-  <ion-list class="aList" *ngIf="offline.useQueueAPIRequests">
+  <ion-list class="aList" *ngIf="_offline.useQueueAPIRequests">
     <ion-list-header>
       <ion-label>
         <h2>{{ 'IDEA_COMMON.OFFLINE.UPLOAD' | translate }}</h2>
         <p>{{ 'IDEA_COMMON.OFFLINE.UPLOAD_QUEUE_REQUESTS_EXPLANATION' | translate }}</p>
       </ion-label>
     </ion-list-header>
-    <ion-item *ngIf="!offline.queueAPIRequests.length">
+    <ion-item *ngIf="!_offline.queueAPIRequests.length">
       <i>{{ 'IDEA_COMMON.OFFLINE.NO_ELEMENTS_TO_UPLOAD' | translate }}</i>
       <ion-icon slot="end" size="small" name="checkmark" color="success" />
     </ion-item>
-    <ion-item *ngFor="let r of offline.queueAPIRequests; let odd = odd" [class.oddItem]="odd">
+    <ion-item *ngFor="let r of _offline.queueAPIRequests; let odd = odd" [class.oddItem]="odd">
       <ion-label class="ion-text-wrap">
         {{ r.description }}
         <p *ngIf="r.error">
@@ -102,16 +102,16 @@
       >
         <ion-icon slot="icon-only" name="download" />
       </ion-button>
-      <ion-spinner slot="end" name="dots" *ngIf="offline.synchronizing" />
+      <ion-spinner slot="end" name="dots" *ngIf="_offline.synchronizing" />
     </ion-item>
   </ion-list>
-  <ion-list class="aList" *ngIf="offline.getResources().length">
+  <ion-list class="aList" *ngIf="_offline.getResources().length">
     <ion-list-header>
       <ion-label>
         <h2>{{ 'IDEA_COMMON.OFFLINE.DOWNLOAD' | translate }}</h2>
         <p>{{ 'IDEA_COMMON.OFFLINE.DOWNLOAD_RESOURCES_EXPLANATION' | translate }}</p>
       </ion-label>
     </ion-list-header>
-    <idea-cacheable-resource *ngFor="let r of offline.getResources()" [resource]="offline.getCacheableResource(r)" />
+    <idea-cacheable-resource *ngFor="let r of _offline.getResources()" [resource]="_offline.getCacheableResource(r)" />
   </ion-list>
 </ion-content>
